Allow incubating Panama Vector in simdvec